--- a/README
+++ b/README
@@ -1,2 +1,7 @@
+=====================
+CODESI
+=====================
+
 Nuevo Portal Institucional de CODESI - La Agenda Digital Peruana
+
 www.codesi.gob.pe
